0.28.0:
- general:
    - allow control over multithreading via environment variables
      DUCC0_NUM_THREADS, DUCC0_PIN_DISTANCE, and DUCC0_PIN_OFFSET.
      This is still experimental and may change in the future.

- nufft/wgridder:
    - changed kernel database to hold optimized kernels depending on
      dimensionality and floating point accuracy. This allows for slightly
      better tuning and improves maximum attainable accuracy in 2D and 3D.

- julia:
    - start of a Julia wrapper, currently focused on nufft support


0.27.0:
- general:
  - modernize CI and build machinery
  - some code was moved from header files into .cc files to avoid duplicate
    symbols in some situations.

- nufft:
  - added a "plan" class, which allows efficient repeated execution of a
    transform with fixed grid geometry and nonuniform point positions.
    (For transforms that are only executed once, the traditional interface
    should be preferred.)
  - added new parameters for data periodicity (formerly hardwired to 2pi) and
    data ordering on the regular grids (formerly starting with the most negative
    frequency, now also allows "standard" FFT ordering starting with the zero
    mode).
  - added a benchmark demo script for easier comparison to FINUFFT and NFFT.jl.


0.26.0:
- general:
  - clarify that the preferred installation method is compilation from source

- wgridder:
  - add "self-tuning" versions of `vis2dirty` and `dirty2vis` which attempt to
    save time by
     - splitting visibilities into a small-w and large-w part and processing
       them separately, and/or
     - subdividing the field of view into facets.
    This can be advantageous when FFT cost would dominate using the naive
    approach and the number of w-planes is large (roughly 50 and higher).

- sht:
  - the methods synthesis, adjoint_synthesis, and synthesis_deriv1 now accept
    an optional leading dimension in the alm/map arrays, to allow "batched"