@@ -296,31 +296,40 @@ py::array dst(const py::array &in, int type, const py::object &axes_,
 
 template<typename T> py::array c2r_internal(const py::array &in,
   const py::object &axes_, size_t lastsize, bool forward, int inorm,
-  py::object &out_, size_t nthreads)
+  bool allow_overwriting_input, py::object &out_, size_t nthreads)
   {
   auto axes = makeaxes(in, axes_);
   size_t axis = axes.back();
-  auto ain = to_cfmav<std::complex<T>>(in);
-  shape_t dims_out(ain.shape());
-  if (lastsize==0) lastsize=2*ain.shape(axis)-1;
-  if ((lastsize/2) + 1 != ain.shape(axis))
+  auto ain_c = to_cfmav<std::complex<T>>(in);
+  shape_t dims_out(ain_c.shape());
+  if (lastsize==0) lastsize=2*ain_c.shape(axis)-1;
+  if ((lastsize/2) + 1 != ain_c.shape(axis))
     throw std::invalid_argument("bad lastsize");
   dims_out[axis] = lastsize;
   auto out = get_optional_Pyarr<T>(out_, dims_out);
   auto aout = to_vfmav<T>(out);
-  {
-  py::gil_scoped_release release;
   T fct = norm_fct<T>(inorm, aout.shape(), axes);
-  ducc0::c2r(ain, aout, axes, forward, fct, nthreads);
-  }
+  if (allow_overwriting_input)
+    {
+    auto ain = to_vfmav<std::complex<T>>(in);
+    {
+    py::gil_scoped_release release;
+    ducc0::c2r_mut(ain, aout, axes, forward, fct, nthreads);
+    }
+    }
+  else
+    {
+    py::gil_scoped_release release;
+    ducc0::c2r(ain_c, aout, axes, forward, fct, nthreads);
+    }
   return out;
   }
 
-py::array c2r(const py::array &in, const py::object &axes_, size_t lastsize,
-  bool forward, int inorm, py::object &out_, size_t nthreads)
+py::array c2r(py::array &in, const py::object &axes_, size_t lastsize,
+  bool forward, int inorm, bool overwrite_input, py::object &out_, size_t nthreads)
   {
   DISPATCH(in, c128, c64, clong, c2r_internal, (in, axes_, lastsize, forward,
-    inorm, out_, nthreads))
+    inorm, overwrite_input, out_, nthreads))
   }
 
 template<typename T> py::array separable_hartley_internal(const py::array &in,
@@ -520,6 +529,9 @@ inorm : int
       | 2 : divide by N
 
     where N is the product of the lengths of the transformed output axes.
+allow_overwriting_input : bool
+    If `True`, the input array may be overwritten with some intermediate data.
+    This can avoid allocating temporary variables and improve performance.
 out : numpy.ndarray (real type with same accuracy as `a`)
     For the required shape, see the `Returns` section.
     Must not overlap with `a`.
@@ -834,7 +846,8 @@ void add_fft(py::module_ &msup)
   m.def("r2c", r2c, r2c_DS, "a"_a, "axes"_a=None, "forward"_a=true,
     "inorm"_a=0, "out"_a=None, "nthreads"_a=1);
   m.def("c2r", c2r, c2r_DS, "a"_a, "axes"_a=None, "lastsize"_a=0,
-    "forward"_a=true, "inorm"_a=0, "out"_a=None, "nthreads"_a=1);
+    "forward"_a=true, "inorm"_a=0, "allow_overwriting_input"_a=false,
+    "out"_a=None, "nthreads"_a=1);
   m.def("r2r_fftpack", r2r_fftpack, r2r_fftpack_DS, "a"_a, "axes"_a,
     "real2hermitian"_a, "forward"_a, "inorm"_a=0, "out"_a=None, "nthreads"_a=1);
   m.def("r2r_fftw", r2r_fftw, r2r_fftw_DS, "a"_a, "axes"_a,
